<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="w,169:300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@sample/drawable[0]" />

        <include
            android:id="@+id/wearBar"
            layout="@layout/view_wearbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/itemImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/wearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wearBar"
            tools:text="@string/wear" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wearTextView"
            tools:text="AWP | Redline" />

        <TextView
            android:id="@+id/priceStaticView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_goneMarginLeft="16dp"
            android:text="$"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/titleView"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/priceView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toBottomOf="@+id/priceStaticView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/priceStaticTextView"
            app:layout_constraintTop_toBottomOf="@+id/priceStaticTextView"
            tools:text="15033.45" />

        <TextView
            android:id="@+id/priceStaticTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/suggested_price"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Hint"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@+id/priceView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/priceStaticView"
            app:layout_constraintTop_toTopOf="@+id/priceStaticView"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/gameImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/priceStaticView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/priceStaticView"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/gameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/gameStaticView"
            app:layout_constraintTop_toBottomOf="@+id/gameStaticView"
            tools:text="VGO" />

        <TextView
            android:id="@+id/gameStaticView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/game"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Hint"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintStart_toEndOf="@+id/gameImageView"
            app:layout_constraintTop_toTopOf="@+id/priceStaticTextView" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/gameGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="gameStaticView,gameImageView,gameTextView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/frontButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/front"
            android:visibility="gone"
            app:backgroundTint="@color/accentColor"
            app:icon="@drawable/ic_image_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/videoButton"
            app:layout_constraintEnd_toStartOf="@+id/backButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/backButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/back"
            android:visibility="gone"
            app:backgroundTint="@color/accentColor"
            app:icon="@drawable/ic_image_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frontButton"
            app:layout_constraintTop_toTopOf="@+id/frontButton" />

        <Button
            android:id="@+id/videoButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/video"
            android:visibility="gone"
            app:backgroundTint="@color/accentColor"
            app:icon="@drawable/ic_play_circle_filled_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/show3dButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_goneMarginRight="16dp" />

        <Button
            android:id="@+id/show3dButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="3D"
            android:visibility="gone"
            app:backgroundTint="@color/accentColor"
            app:icon="@drawable/ic_3d_rotation_black_24dp"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/videoButton"
            app:layout_constraintTop_toTopOf="@+id/videoButton"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/categoryStaticView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Hint"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceStaticView" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintBottom_toTopOf="@+id/frontButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryStaticView"
            tools:text="Extraordinary AWP" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>